fix(ui): keep the transcript inert list and the routing table as one list
MessageCollapser decided a message renders nothing from its own
hand-maintained list, while LanternaMessageDispatcher decided the same
thing from the deliberately-blank arms of its switch. The two drifted:
StreamRequestStart is emitted on every API request, not only on a rare
fallback, and the collapser did not know it was blank — so every request
broke the read/search run that was accumulating around it.

rendersNothing now names those arms once, dispatch early-returns on it,
and the collapser delegates to it. The routing table and the predicate
are physically the same list, so a fourth blank arm cannot be added to
one without the other.

Also seals the git badge onto the group whose panel earned it.
paintAndClearGitBadge runs at the end of flushReadSearchRun, the last
moment that panel is in hand; the clear stays unconditional because
holding the badge leaks it onto the next turn.